# orange

./: .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY_POLICY.md  GOVERNANCE.md  Makefile  README.md  RELEASE_POLICY.md  SECURITY.md  SUPPORT.md
.github/: CODEOWNERS  dependabot.yml  dependency-review-config.yml  pull_request_template.md
compiler/: Cargo.toml  README.md
compiler/crates/orange-compiler/: Cargo.toml
compiler/crates/orange-compiler/src/: core.rs  diagnostic.rs  edition.rs  eval.rs  lexer.rs  lib.rs  parser.rs  semantics.rs  source.rs
compiler/crates/orangec/: Cargo.toml
compiler/crates/orangec/src/: main.rs
compiler/crates/orangec/tests/: cli.rs  s3a_conformance.rs
compiler/fixtures/: hello.or  typed-answer.or
compiler/fixtures/s3a/: invalid-duplicate-spec.or  invalid-int-magnitude.or  invalid-negative-word.or  invalid-typed-impl.or  invalid-unsupported-type.or  invalid-word-range.or  invalid-word-width.or  valid-empty-mixed.or  valid-int-radices.or  valid-word8-boundaries.or
docs/: ARCHITECTURE.md  ASSURANCE.md  DECISIONS.md  GATE0_SUPPORT_ENVELOPES.md  GATE0_TRACEABILITY.md  LANGUAGE_2026.md  PRODUCT_FORM_DECISION_PACKET.md  PROJECT_CHARTER.md  PROOF_FOUNDATION_DECISION_SUITE.md  REPRODUCIBILITY.md  RESEARCH.md  ROADMAP.md  SEMANTICS_2026.md  SEMANTIC_STRATA_DECISION_SUITE.md  THE_ORANGE_BOOK.md  USER_JOURNEYS.md
policy/: README.md  gate0-repository-policy.json  makefile-entrypoint-contract-v0.1.json
schemas/: README.md
tools/: fs_sandbox.c  validate_foundation.py
(+52 files in other folders)
