[workspace]
members = [
  "crates/orange-compiler",
  "crates/orangec",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.96.1"
publish = false

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"

[profile.release]
debug-assertions = true
overflow-checks = true
